--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 											<code>docker pull mongo</code><br>
 											<code>mkdir mongodb_test</code><br>
 											<code>cd mongodb_test</code><br>
-											when running mapping vlime with -v and ports -p:<br>
+											when running an image, we map volume with -v and ports -p:<br>
 											<code>docker run -it -v mongodata:/data/db -p 27017:27017 --name mongodb -d mongo</code>
 											<code>docker exec -it my_mongo bash</code><br>
 											<code>mongo</code><br>
