--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 											<li>Preparing DockerFile that contains set of instructions.</li>
 											<li>Running build command to buld Docker image due to instructions.</li>
 											<li>Docker reaches the cache memeory to see if some of the instructions were executed earlier so that it doesn't execute it again.</li>
-											<li>When building first time, we import basic Docker image from the Docker registry.<li>
+											<li>When building first time, we import basic Docker image from the Docker registry.</li>
 											<li>Then on top of that, we append following elements of app's environment due to Dockerfile's instructions.</li>
 											<li>When Docker image we can run as many Docker containers as we want using built image.</li>
 										</ol>
