--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 											<code>RUN pip install -r requirements.txt</code><br>
 											# copy the content of the local src directory to the working directory<br>
 											<code>COPY src/ .</code><br>
-											# app will run on port 5000 inside docker contaier
+											# app will run on port 5000 inside docker contaier<br>
 											<code>Expose: 5000</code>
 											# making container in a running stage <br>
 											<code>CMD [ "python", "./main.py" ]</code>
