--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 											</li>
 											<li>That way we can define services and link them with each other.</li>
 											<li>Docker Compose is included in Docker Desktop for Windows.</li>
-											<li>Docker Compose can be installed alos with pip as well: <code>pip install docker-compose</code>.</li>
+											<li>Docker Compose can be installed also with pip as well: <code>pip install docker-compose</code>.</li>
 											<li>When containerizing, we can specify which files can be ignored by putting the into <code>.dockerignore</code>:
 												<br>
 												- over there we just need to specify directory of it:<br>
