--- a/index.html
+++ b/index.html
@@ -248,8 +248,8 @@
 											# copy the content of the local src directory to the working directory<br>
 											<code>COPY src/ .</code><br>
 											# app will run on port 5000 inside docker contaier<br>
-											<code>Expose: 5000</code>
-											# making container in a running stage <br>
+											<code>Expose: 5000</code><br>
+											# making container in a running stage<br>
 											<code>CMD [ "python", "./main.py" ]</code>
 										</li>
 										<li>Due to the fact, the application’s dependencies change less frequently than the Python code, the insctruction of installing dependencies precedes the instruction of exporting app's source code to the container.</li>
