--- a/index.html
+++ b/index.html
@@ -270,9 +270,10 @@
 											<code>docker run -it -d -p 5000:5000 --name container_name image_name</code><br>
 											- check all the docker containers:<br>
 											<code>docker ps</code><br>
-											- mapping local directory to container container in order to get outputs from container to local directory:
+											- mapping local directory to container container in order to get outputs from container to local directory:<br>
 											<code>docker run -v C:\...\docker_test:/code</code><br>
-											- mapping local dir: <code>C:\...\docker_test</code> to container dir: <code>/code</code>
+											- mapping local dir: <code>C:\...\docker_test</code> to container dir: <code>/code</code><br>
+											- as long as container is running, flask app is available on port 5000.
 										</li>
 									</ul>
 
