--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 										<li>That way, we have the source code layer upon the dependencies layer and any changes to the code won't affect the dependencies layer.</li>
 									</ul>
 
-									<h5>Terminal:</h5>
+									<h5>Running an example Dockerfile in terminal:</h5>
 									<ul>
 										<li>Building image and running a container:
 											<br>
@@ -311,7 +311,7 @@
 										</li>
 									</ul>
 
-									<h5>Pulling from Docker Hub:</h5>
+									<h5>Pulling image from Docker Hub:</h5>
 									<ul>
 										<li>Cmd:
 											<br>
