--- a/index.html
+++ b/index.html
@@ -49,6 +49,16 @@
 										<h2>Application in a Container</h2>
 										<h3>Intro</h3>
 
+										<h5>What is a Container?</h5>
+										<ul>
+											<li>A light-weight, stand-alone, executable package of a piece of an application.</li>
+											<li>It hase everything to run it i.e. code, runtime, dependecies, system tools, settings and configuration and so on.</li>
+											<li>When application is running in a container we can call it the contenerized application</li>
+											<li>Contenerized application works consistently across different environments: devlopment, testing, production in local machine or on cloud instance with no need for rebuilding or retooling.</li>
+											<li>It ensures continues deployment with no downtime when new versions of the app are being made several times per a day.</li>
+											<li>It's very popular solution in the age of cloud architecutre and distributed computing environments.</li>
+										<ul>
+
 										<h5>When to use Docker:</h5>
 										<ul>
 											<li>We want to make an application portable.</li>
