--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 											<li>App deployment on cloud's server.</li>
 										</ul>
 
-										<h5>Deckerizing an application:</h5>
+										<h5>Deckerizing app workflow:</h5>
 										<ol>
 											<li>Preparing DockerFile that contains set of instructions.</li>
 											<li>Running build command to buld Docker image due to instructions.</li>
@@ -78,14 +78,13 @@
 
 										<img src="images/dockerflow.JPG">
 
-										<h5>Docker container:</h5>
+										<h5>Virtual Machines vs Docker Containers:</h5>
 										<ul>
 											<li>Unlike Virtual Machines, Docker containers are not meant to host operating systems.</li>
 											<li>Containers are meant to run a specific task or process like hosting instance of web server, application or database, computation or analysis.</li>
 											<li>Once the task is complete, the container terminates. Container lives as long as the process inside it is alive.</li>
 										</ul>
 
-										<h5>Virtual Machines vs Docker Containers:</h5>
 										<img src="images/vm_vs_docker.jpg	" width="700"><span style="font-size:12px;">source: geekflare</span><br><br>
 										<table>
 											<thead>
