--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
 										<ul>
 											<li>Unlike Virtual Machines, Docker containers are not meant to host operating systems.</li>
 											<li>Containers are meant to run a specific task or process like hosting instance of web server, application or database, computation or analysis.</li>
-											<li>Once the task is complete, the container terminates. Container lives as long as the process inside it is alive.</li>
+											<li>Once the task is complete, the container terminates. It lives as long as the process inside is alive.</li>
 										</ul>
 
-										<img src="images/vm_vs_docker.jpg	" width="700"><span style="font-size:12px;">source: geekflare</span><br><br>
+										<img src="images/vm_vs_docker.jpg	" width="650"><span style="font-size:12px;">source: geekflare</span><br><br>
 										<table>
 											<thead>
 												<tr>
