--- a/index.html
+++ b/index.html
@@ -348,13 +348,20 @@
 
 									<h5>Pushing image to Docker Hub:</h5>
 									<ul>
-										<li>Cmd:
+										<li>Terminal:
 											<br>
+											at first we need to login into Docker Hub:<br>
 											<code>docker login</code><br>
-											<br>
+											then we need to rename a repository and push it to the Docker Hub:<br>
 											<img src="images/docker_push2.JPG">
 										</li>
 									</ul>
+
+									<h5>Docker Hub in CICD Pipeline:</h5>
+									<ul>
+										<li>...</li>
+									</ul>
+
 
 									<h5>Docker-compose.yml example:</h5>
 									<ul>
