--- a/index.html
+++ b/index.html
@@ -404,7 +404,11 @@
 									<p>Following installation required:</p>
 									<ul>
 										<li>Docker installation from https://www.docker.com/</li>
-										<li>Enable Kubernetes in Docker Desktop settings.</li>
+										<li>Enable Kubernetes in Docker Desktop settings:
+											<br>
+											<br>
+											<img src="images/kubernetes_activation.JPG">
+										</li>
 										<li>Minikube</li>
 									</ul>
 								</div>
