--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
 										<li>Enable Kubernetes in Docker Desktop settings:
 											<br>
 											<br>
-											<img src="images/kubernetes_activation.JPG">
+											<img src="images/kubernetes_activation.JPG" width="780">
 										</li>
 										<li>Minikube</li>
 									</ul>
