--- a/index.html
+++ b/index.html
@@ -409,7 +409,11 @@
 											<br>
 											<img src="images/kubernetes_activation.JPG" width="780">
 										</li>
-										<li>Minikube</li>
+										<li>Downloading kubectl.exe from https://kubernetes.io/docs/tasks/tools/install-kubectl/
+											<br>
+											- get it on C hard drive: <code>C:\kubectl<code>,<br>
+											- add this path into System Variables in Envrionment Variables under Path.
+										</li>
 									</ul>
 								</div>
 							</section>
