--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
 										</li>
 										<li>Downloading kubectl.exe from https://kubernetes.io/docs/tasks/tools/install-kubectl/
 											<br>
-											- get it on C hard drive: <code>C:\kubectl<code>,<br>
+											- get it on C hard drive: <code>C:\kubectl</code>,<br>
 											- add this path into System Variables in Envrionment Variables under Path.
 										</li>
 									</ul>
