--- a/index.html
+++ b/index.html
@@ -403,13 +403,13 @@
 									<h3>Setup</h3>
 									<p>Following installation required:</p>
 									<ul>
-										<li>Docker installation from https://www.docker.com/</li>
+										<li>Docker installation from <code>https://www.docker.com/</code></li>
 										<li>Enable Kubernetes in Docker Desktop settings:
 											<br>
 											<br>
 											<img src="images/kubernetes_activation.JPG" width="780">
 										</li>
-										<li>Downloading kubectl.exe from https://kubernetes.io/docs/tasks/tools/install-kubectl/
+										<li>Downloading kubectl.exe from <code>https://kubernetes.io/docs/tasks/tools/install-kubectl/</code>
 											<br>
 											- get it on C hard drive: <code>C:\kubectl</code>,<br>
 											- add this path into System Variables in Envrionment Variables under Path.
