--- a/index.html
+++ b/index.html
@@ -409,8 +409,9 @@
 											<br>
 											<img src="images/kubernetes_activation.JPG" width="780">
 										</li>
-										<li>Downloading kubectl.exe from <code>https://kubernetes.io/docs/tasks/tools/install-kubectl/</code>
+										<li>Download kubectl.exe from:
 											<br>
+											<code>https://kubernetes.io/docs/tasks/tools/install-kubectl/</code><br>
 											- get it on C hard drive: <code>C:\kubectl</code>,<br>
 											- add this path into System Variables in Envrionment Variables under Path.
 										</li>
