--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 											<li>Docker reaches the cache memeory to see if some of the instructions were executed earlier so that it doesn't execute it again.</li>
 											<li>When building first time, we import basic Docker image from the Docker registry.</li>
 											<li>Then on top of that, we append following elements of app's environment due to Dockerfile's instructions.</li>
-											<li>When Docker image we can run as many Docker containers as we want using built image.</li>
+											<li>When Docker Image is ready, we can run as many Docker containers as we want using that built image.</li>
 										</ol>
 
 										<img src="images/dockerflow.JPG">
