--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 										<ul>
 											<li>A light-weight, stand-alone, executable package of a piece of an application.</li>
 											<li>It hase everything to run it i.e. code, runtime, dependecies, system tools, settings and configuration.</li>
-											<li>When application is running in a container we can call it a contenerized application</li>
-											<li>Contenerized application works consistently across different environments: devlopment, testing, production in local machine or on cloud instance with no need for rebuilding or retooling.</li>
+											<li>When application is running in a container we can call it a contenerized application.</li>
+											<li>Contenerized application works consistently across different environments: devlopment, testing, production in a local machine or on the cloud instance with no need for rebuilding or retooling.</li>
 											<li>It ensures continues deployment with no downtime when new versions of the app are being made several times per a day.</li>
 											<li>It's very popular solution in the age of cloud architecutre and distributed computing environments.</li>
 										</ul>
@@ -69,7 +69,7 @@
 										<h5>Deckerizing app workflow:</h5>
 										<ol>
 											<li>Preparing DockerFile that contains set of instructions.</li>
-											<li>Running build command to buld Docker image due to instructions.</li>
+											<li>Running building command to built Docker Image due to instructions listed in the first step.</li>
 											<li>Docker reaches the cache memeory to see if some of the instructions were executed earlier so that it doesn't execute it again.</li>
 											<li>When building first time, we import basic Docker image from the Docker registry.</li>
 											<li>Then on top of that, we append following elements of app's environment due to Dockerfile's instructions.</li>
