--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
 
 										<h5>Docker Architecture:</h5>
 										<ol>
-											<li>Docker Daemon on a server - manages docker objects: images, containers, network. Runs on OS. Its build from following components:
+											<li>Docker Daemon on a server - manages docker objects: images, containers, network. Runs on OS. It's built from following components:
 												<br>
-												- volumes for pesisting data in a docker container.<br>
+												- volumes for persisting data in a docker container.<br>
 												- network interface for docker containers,<br>
-												- container runtime for managing container lifecycle - it runs and stops a contaier.<br>
+												- container runtime for managing container lifecycle - it runs and stops a container.<br>
 												- builder that builds images from a Dockerfile.
 											</li>
 											<li>REST API available by Docker Daemon as interface to interact to Daemon - passing docker commands.</li>
