--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 										<h5>Kubernetes aka k8s:</h5>
 										<ul>
 											<li>Kubernetes supports different container runtimes.</li>
-											<li>Open-source platform for clustering, running, scaling and managing containerized applicatons.</li>
+											<li>Open-source platform for clustering, running, scaling and managing containerized applications.</li>
 											<li>It groups conatiners into logical services that builds up final application.</li>
 											<li>Key elements:
 												<br>
